assets/css/main.css
/* ... */
			#main article.active {
				-moz-transform: translateY(0);
				-webkit-transform: translateY(0);
				-ms-transform: translateY(0);
				transform: translateY(0);
				opacity: 1;
			}

			#main article .close {
				display: block;
				position: absolute;
				top: 0;
				right: 0;
				width: 4rem;
				height: 4rem;
				cursor: pointer;
				text-indent: 4rem;
				overflow: hidden;
				white-space: nowrap;
			}

				#main article .close:before {
					-moz-transition: background-color 0.2s ease-in-out;
					-webkit-transition: background-color 0.2s ease-in-out;
					-ms-transition: background-color 0.2s ease-in-out;
					transition: background-color 0.2s ease-in-out;
					content: '';
					display: block;
					position: absolute;
					top: 0.75rem;
					left: 0.75rem;
					width: 2.5rem;
					height: 2.5rem;
					border-radius: 100%;
					background-position: center;
					background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='20px' height='20px' viewBox='0 0 20 20' zoomAndPan='disable'%3E%3Cstyle%3Eline %7B stroke: %23ffffff%3B stroke-width: 1%3B %7D%3C/style%3E%3Cline x1='2' y1='2' x2='18' y2='18' /%3E%3Cline x1='18' y1='2' x2='2' y2='18' /%3E%3C/svg%3E");
					background-size: 20px 20px;
					background-repeat: no-repeat;
				}

				#main article .close:hover:before {
					background-color: rgba(255, 255, 255, 0.075);
				}

				#main article .close:active:before {
					background-color: rgba(255, 255, 255, 0.175);
				}

		@media screen and (max-width: 736px) {

			#main article {
				padding: 3.5rem 2rem 0.5rem 2rem ;
			}

				#main article .close:before {
					top: 0.875rem;
					left: 0.875rem;
					width: 2.25rem;
					height: 2.25rem;
					background-size: 14px 14px;
				}

		}

		@media screen and (max-width: 480px) {

			#main article {
				padding: 3rem 1.5rem 0.5rem 1.5rem ;
			}

		}

/* Footer */

	#footer {
		-moz-transition: -moz-transform 0.325s ease-in-out, -moz-filter 0.325s ease-in-out, opacity 0.325s ease-in-out;
		-webkit-transition: -webkit-transform 0.325s ease-in-out, -webkit-filter 0.325s ease-in-out, opacity 0.325s ease-in-out;
		-ms-transition: -ms-transform 0.325s ease-in-out, -ms-filter 0.325s ease-in-out, opacity 0.325s ease-in-out;
		transition: transform 0.325s ease-in-out, filter 0.325s ease-in-out, opacity 0.325s ease-in-out;
		width: 100%;
		max-width: 100%;
		margin-top: 2rem;
		text-align: center;
	}

		#footer .copyright {
			letter-spacing: 0.2rem;
			font-size: 0.6rem;
			opacity: 0.75;
			margin-bottom: 0;
			text-transform: uppercase;
		}

		body.is-article-visible #footer {
			-moz-transform: scale(0.95);
			-webkit-transform: scale(0.95);
			-ms-transform: scale(0.95);
			transform: scale(0.95);
			-moz-filter: blur(0.1rem);
			-webkit-filter: blur(0.1rem);
			-ms-filter: blur(0.1rem);
			filter: blur(0.1rem);
			opacity: 0;
		}

		body.is-preload #footer {
			opacity: 0;
		}


img.profile-img{
	height: inherit;
	
}

div.around-img-div{
	display: flex;
    justify-content: center;
    align-items: center;

	height: inherit;
    width: inherit;
    border: 4px transparent solid;
    overflow: hidden;
    border-radius: 100%;
}

div.center-image{
	display: flex;
	align-items: center;
	justify-content: center;
}

/* Intro for Pininit */

.project-class{
	border-left: 1px white solid;
	border-top: 1px white solid;
	padding-left: 12px;
	padding-top: 12px;


}

div.project-class a h4:hover {
	text-decoration: underline;
}

div.project-links{
	display: flex;
	justify-content: flex-start;
	align-items: center;
}
div.project-links h3{
	font-size: 2rem;
}

div.project-links a{
	display: flex;
	text-align: center;
	justify-content: center;
	align-items: center;
	margin-left: 4vw;
}

ul.list-for-project{
	padding-left: 7%;
}

.icon_img{
	height: 50px;
	width: auto;
	padding: 5px;
}

.icon-div{
	width: fit-content;
	background-color: #8fa2b1;
	padding: 1vw;
	padding-left: 2vw;
	padding-right: 2vw;
	border-radius: 4px;
	margin-top: 15px;
	margin-bottom: 15px;
}

.resume-btn{
	display: block;
    min-width: 7.5rem;
    height: 2.75rem;
    line-height: 2.75rem;
    padding: 0 1.25rem 0 1.45rem;
    text-transform: uppercase;
    letter-spacing: 0.2rem;
    font-size: 0.8rem;
    border-bottom: 0;
    border: solid 1px white;
    border-radius: 4px;
    max-width: 167px;
}

.outer-resume-btn{
	width: 100%;
	display: flex;
	align-items: center;
	justify-content: center;
	padding-bottom: 2vh;
}

.resume-btn:hover{
	text-decoration: none;
	border-bottom: 1px solid white;
	background-color: rgba(255, 255, 255, 0.075);
	cursor: pointer;
}

.icon_splash{
	height: 36px;
	width: 36px;
    padding: 5px;
	border-bottom: none;
	display: flex;
    align-items: center;
    justify-content: center;
}

.icon_splash img.github{
	height: 28px;
}

.icon_splash img.linkedIn{
	height: 32px;
}

.holder-links{
	display: flex;
    align-items: center;
    justify-content: center;
    padding-bottom: 1vh;
    padding-top: 1.5vh;
}
.around-img-div-contact{
	display: flex;
	align-items: center;
	justify-content: center;
	border-radius: 100%;
	width: 60px;
	height: 60px;
	overflow: hidden;
}

.two_up{
	height: 70px;
	width: 70px;
	border-radius: 100%;
	border: 1px solid white;
	display: flex;
	align-items: center;
	justify-content: center;
	margin-bottom: 20px;
}

.profile-img-contact{
	height: inherit;

}
.the-list{
	display: flex;
	align-items: center;
	justify-content: space-between;
}

.skills-size{
	height: 140px;
    padding: 24px;
}

.icon-div-skills{
	display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
    background-color: #ffffff5c;
    padding: 10px;
    border-radius: 4px;
}

.hover-div-contact:hover{
	border-radius: 100%;
    border: 1px white solid;
    padding: 1px;
	background-color: rgba(255, 255, 255, 0.068);
}

.hover-div-contact{
	border-radius: 100%;
    border: 1px rgba(255, 255, 255, 0.323) solid;
    padding: 1px;
	margin-left: 5px;
	margin-right: 5px;
}
/* ... */

